@@ -6,8 +6,8 @@ from .dictionary import DictionaryInfo
 from .mecab import MeCab
 from .node import MeCabNode
 
-__version__ = '0.0.7'
-__version_info__ = (0, 0, 7)
+__version__ = '0.0.8'
+__version_info__ = (0, 0, 8)
 
 
 '''
